# backend/app/Http/Resources/PostResource.php
@@ -17,8 +17,10 @@ class PostResource extends JsonResource
             'author_photo' => $this->user?->profile_photo,
             'published_at' => $this->created_at?->toISOString(),
             'content' => $this->content,
+            'image' => $this->image_path ? Storage::disk('public')->url($this->image_path) : null,
             'image_path' => $this->image_path,
             'image_url' => $this->image_path ? Storage::disk('public')->url($this->image_path) : null,
+            'video' => $this->video_path ? Storage::disk('public')->url($this->video_path) : null,
             'video_path' => $this->video_path,
             'video_url' => $this->video_path ? Storage::disk('public')->url($this->video_path) : null,
             'likes_count' => $this->whenCounted('likes'),
